--- a/react-first/src/components/cardProduct.css
+++ b/react-first/src/components/cardProduct.css
@@ -19,4 +19,10 @@
 
 .cardButton{
     margin: 1rem;
+    background-color: #FFE4C4; 
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 4px;
 }
